--- a/apps/guide-app/src/app/auth/reset-password/reset-password.component.html
+++ b/apps/guide-app/src/app/auth/reset-password/reset-password.component.html
@@ -5,24 +5,19 @@
     </div>
     <div class="right">
         <div class="title">
-            <h3>Change</h3>
-            <h2 class="company">New Password</h2>
+            <h3>Reset</h3>
+            <h2 class="company">Password</h2>
         </div>
         <div class="form-fields">
             <div class="user-forms">
                 <mat-form-field appearance="outline">
-                    <mat-label>Old Password</mat-label>
-                    <input matInput type="password" placeholder="Enter Old Password">
+                    <mat-label>Username</mat-label>
+                    <input matInput type="text" [(ngModel)]="userInfo.username" placeholder="Enter Username Password">
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>New Password</mat-label>
-                    <input matInput type="password" placeholder="Enter New Password">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Re New password</mat-label>
-                    <input matInput type="password" placeholder="Enter Re New Password">
+                    <mat-label>Email</mat-label>
+                    <input matInput type="email" [(ngModel)]="userInfo.email" placeholder="Enter Email">
                 </mat-form-field>
                 <button mat-raised-button color="primary" class="otp-btn" (click)="handleResetPassword()">Reset</button>
             </div>
