--- a/apps/guide-app/src/app/pages/pages.component.html
+++ b/apps/guide-app/src/app/pages/pages.component.html
@@ -38,6 +38,10 @@
                 </mat-expansion-panel-header>
                 <div>
                     <ul>
+                        <li routerLink="/auth/change-password">
+                            <mat-icon>lock_reset</mat-icon>
+                            <span>Change Password</span>
+                        </li>
                         <li (click)="handleLogout()">
                             <mat-icon>logout</mat-icon>
                             <span>Logout</span>
