--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,5 @@
 <div class="table-container">
+    <h2>{{ title || '' }}</h2>
     <ng-container *ngIf="isLoadingResults; else tableTemplate">
         <app-loader></app-loader>
     </ng-container>
