--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -36,5 +36,9 @@
                 </div>
             }
         </div>
+
+        @if (isLoading) {
+            <app-loader></app-loader>
+        }
     </div>
 </section>
