--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -21,7 +21,7 @@
                             <button mat-icon-button matTooltip="History" matTooltipPosition="above" (click)="handleToggleOptionsState('history')" *ngIf="optionRights['Right_History'] === 1" [matBadge]="historyData.length">
                                 <mat-icon>history</mat-icon>
                             </button>
-                            <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" color="warn">
+                            <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" color="warn" (click)="handleEditRouter('Edit')">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </div>
