--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -35,6 +35,10 @@
                 td {
                     padding: 10px;
                     border: 1px solid #ddd;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    max-width: 130px;
                 }
             }
 
@@ -51,6 +55,14 @@
             display: flex;
             align-items: center;
             gap: 20px;
+
+            &::before {
+                display: none;
+            }
+
+            &::after {
+                display: none;
+            }
         }
 
         .action-details {
