--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/global.scss";
+@import "../../../styles/variables";
 
 .container {
     height: 100%;
@@ -17,6 +18,12 @@
                     box-shadow: none;
                 }
 
+                .mat-expansion-panel-header-title {
+                    span.active {
+                        color: $primary;
+                    }
+                }
+
                 ul {
                     list-style: none;
                     padding: 0px;
@@ -24,6 +31,9 @@
 
                     li {
                         padding: 10px;
+                        &.active {
+                            color: $primary;
+                        }
                     }
                 }
             }
@@ -51,14 +61,22 @@
     mat-drawer-content {
         .header {
             height: 60px;
-            width: 100%;
             position: fixed;
+            width: 100vw;
             top: 0;
             z-index: 10;
             background-color: #ffffff;
             display: flex;
             align-items: center;
-            padding: 0px 20px;
+            justify-content: space-between;
+            gap: 20px;
+
+            .static-menus {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                justify-content: flex-end;
+            }
         }
     }
 }
