--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,24 +1,37 @@
 @import "../../../../styles/variables";
 
 .table-container {
-    position: relative;
-    min-height: 200px;
-    max-height: 400px;
-    overflow: auto;
 
-    table {
-        td, th {
-            overflow: hidden;
-            max-width: 150px;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-            mat-icon {
-                margin-right: 10px;
-                cursor: pointer;
+    .range {
+        margin-bottom: 20px;
+    }
 
-                &.comment {
-                    color: $primary;
+    .table-wrapper {
+        position: relative;
+        min-height: 200px;
+        max-height: 400px;
+        overflow: auto;
+
+        table {
+            td, th {
+                overflow: hidden;
+                max-width: 150px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+
+                mat-icon {
+                    margin-right: 10px;
+                    cursor: pointer;
+
+                    &.comment {
+                        color: $primary;
+                    }
                 }
             }
         }
