--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -12,11 +12,13 @@
                     <div class="header">
                         <h3>Details</h3>
                         <div class="icons">
-                            <button mat-icon-button color="accent" [matMenuTriggerFor]="reportMenu" matTooltip="Report" matTooltipPosition="above" *ngIf="reportsData.length > 0">
+                            <button mat-icon-button color="accent" [matMenuTriggerFor]="reportMenu" matTooltip="Report" matTooltipPosition="above" [matBadge]="reportsData.length" *ngIf="reportsData.length > 0">
                                 <mat-icon>print</mat-icon>
                             </button>
                             <mat-menu #reportMenu="matMenu">
-                                <button mat-menu-item *ngFor="let report of reportsData" (click)="handleShowReport(report)">{{ report.ReportTitle }}</button>
+                                <button mat-menu-item *ngFor="let report of reportsData" (click)="handleShowReport(report)">
+                                    {{ report.ReportTitle }}
+                                </button>
                             </mat-menu>
                             <button mat-icon-button color="primary" matTooltip="Comments" matTooltipPosition="above" (click)="handleToggleOptionsState('comment')" *ngIf="optionRights['Rights_Comment'] === 1" [matBadge]="commentsData.length">
                                 <mat-icon>comment</mat-icon>
@@ -27,7 +29,7 @@
                             <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" color="warn" (click)="handleEditRouter('Edit')">
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" color="warn" (click)="handleToggleOptionsState('attachment')" >
+                            <button mat-icon-button matTooltip="Attachments" matTooltipPosition="above" color="warn" (click)="handleToggleOptionsState('attachment')" [matBadge]="attachmentsData.length" *ngIf="optionRights['Rights_Attachement'] === 1">
                                 <mat-icon>attachment</mat-icon>
                             </button>
                         </div>
@@ -51,6 +53,9 @@
                 <mat-card-footer>
                     <h3>Actions</h3>
                     <div class="icons">
+                        <button mat-icon-button color="accent" [matMenuTriggerFor]="reportMenu" matTooltip="Report" matTooltipPosition="above" [matBadge]="reportsData.length" *ngIf="reportsData.length > 0">
+                            <mat-icon>print</mat-icon>
+                        </button>
                         <button mat-icon-button color="primary" matTooltip="Comment" matTooltipPosition="above" (click)="handleToggleOptionsState('comment')" *ngIf="optionRights['Rights_Comment'] === 1" [matBadge]="commentsData.length">
                             <mat-icon>comment</mat-icon>
                         </button>
@@ -59,6 +64,9 @@
                         </button>
                         <button mat-icon-button color="warn" matTooltip="Edit" matTooltipPosition="above">
                             <mat-icon>edit</mat-icon>
+                        </button>
+                        <button mat-icon-button matTooltip="Attachments" matTooltipPosition="above" color="warn" (click)="handleToggleOptionsState('attachment')" [matBadge]="attachmentsData.length" *ngIf="optionRights['Rights_Attachement'] === 1">
+                            <mat-icon>attachment</mat-icon>
                         </button>
                     </div>
                 </mat-card-footer>
@@ -100,28 +108,19 @@
                 </mat-card-header>
                 <mat-card-content>
                     <ng-container *ngIf="commentsData.length > 0; else noCommentTemplate">
-                        <table class="comments">
-                            <thead>
-                                <tr>
-                                    <th>Action Time</th>
-                                    <th>Action</th>
-                                    <th>Username</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let comment of commentsData">
-                                    <td>{{ comment.Subject }}</td>
-                                    <td>{{ parseDate(comment.Date) | date: 'medium' }} / By</td>
-                                    <td>{{ comment.By }}</td>
-                                    <td>
-                                        <!-- <button mat-icon-button> -->
-                                            <mat-icon color="primary">edit</mat-icon>
-                                        <!-- </button> -->
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="comments" *ngFor="let comment of commentsData">
+                            <p class="comment_subject"><b>{{ comment.Subject }}</b></p>
+                            <div class="comment-head">
+                                <mat-icon>account_circle</mat-icon>
+                                <div class="comment_head_details">
+                                    <p class="commented_by">{{ comment.By }} added this comment</p>
+                                    <p class="comment_date">{{ comment.Date }}</p>
+                                </div>
+                            </div>
+                            <div class="comment-content">
+                                <div [innerHTML]="comment.CommentText "></div>
+                            </div>
+                        </div>
                     </ng-container>
                     <ng-template #noCommentTemplate>
                         <p>No Comments to Display</p>
@@ -139,11 +138,11 @@
                 <mat-card-content>
                     <table class="attachments-table">
                         <tr *ngFor="let attachment of attachmentsData">
-                            <th>{{ attachment.PrimeId }}</th>
+                            <th>{{ attachment.DisplayFileName }}</th>
                             <td>
-                                <!-- <a [href]="attachment.FilePath" download>Download</a> -->
-                                <!-- <a href="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf" download>Download</a> -->
-                                <a href="https://file-examples.com/wp-content/storage/2017/02/file_example_XLS_10.xls" download>Download</a>
+                                <a [href]="attachment.RefFilePath" target="_blank" download style="margin-left: 10px;">
+                                    <mat-icon>download</mat-icon>
+                                </a>
                             </td>
                         </tr>
                     </table>
