--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,8 +1,8 @@
 <div class="table-container">
     <div class="header">
         <div class="head-action">
-            <h2>{{ title || '' }}</h2>
-            <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+            <h2 *ngIf="dataSource.data.length > 0">{{ title || '' }}</h2>
+            <button mat-icon-button color="primary" [matMenuTriggerFor]="menu" *ngIf="dataSource.data.length > 0">
                 <mat-icon>
                     download
                 </mat-icon>
