--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -89,8 +89,8 @@
 
                     .user-img {
                         img {
-                            width: 150px;
-                            height: 150px;
+                            width: 100%;
+                            height: 100%;
                             background-color: #e1f0ff !important;
                             color: #6993ff;
                             border-radius: 50%;
@@ -122,6 +122,13 @@
                     display: flex;
                     align-items: center;
                     gap: 20px;
+
+                    button {
+                        a {
+                            color: #6993ff;
+                            text-decoration: none;
+                        }
+                    }
                 }
             }
         }
