--- a/src/app/pages/dataview/dataview.component.scss
+++ b/src/app/pages/dataview/dataview.component.scss
@@ -30,7 +30,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    flex-direction: row-reverse;
+                    // flex-direction: row-reverse;
                     width: 100%;
 
                     .icons {
